<resources>
    <string name="app_name">Battleship</string>

    <!-- ConnectionModeActivity -->
    <string name="activity_connection_mode_label">Connection mode</string>
    <string name="button_bluetooth_text" translatable="false">Bluetooth</string>
    <string name="button_wifi_text" translatable="false">Wi-Fi</string>

    <!-- DifficultyModeActivity -->
    <string name="activity_difficulty_mode_label">Difficulty mode</string>
    <string name="button_easy_text">Easy</string>
    <string name="button_hard_text">Hard</string>

    <!-- GameActivity -->
    <string name="textview_player_grid_text">Your grid</string>
    <string name="textview_enemy_grid_text">Enemy\'s grid</string>
    <string name="textview_player_turn_text">Your turn</string>
    <string name="textview_enemy_turn_text">Enemy\'s turn</string>
    <string name="popup_title_victory">Well played!!</string>
    <string name="popup_title_defeat">Game Over</string>
    <string name="popup_message_victory">You win.</string>
    <string name="popup_message_defeat">You loose.</string>
    <string name="popup_button_text">Back to start menu</string>
    <string name="popup_title_game_saved">Save</string>
    <string name="popup_message_game_saved">Game successfully saved.</string>
    <string name="button_save_text">Save</string>
    <string name="toast_save_text">Save unavailable during enemy\'s turn.</string>

    <!-- SettingsActivity -->
    <string name="activity_settings_label">Settings</string>
    <string name="checkbox_music_text">Turn the music on</string>
    <string name="checkbox_ambiance_text">Turn the ambiance on</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonManageAccount">Manage account</string>
    <string name="toast_not_connected_yet">Not connected yet</string>
    <string name="toast_disconnected">Disconnected</string>

    <!-- ShipsArrangementActivity -->
    <string name="activity_shis_arrangement_label">Ships arrangement</string>
    <string name="button_random_generation_text">Random generation</string>
    <string name="button_play_text">Play</string>
    <string name="button_change_orientation_text">Orientation : </string>
    <string name="button_ship_5_text">Aircraft Carrier</string>
    <string name="button_ship_4_text">Cruiser</string>
    <string name="button_ship_3_1_text">Destroyer</string>
    <string name="button_ship_3_2_text">Submarine</string>
    <string name="button_ship_2_text">Torpedo Boat</string>
    <string name="button_suppression_text">Erase</string>
    <string name="toast_drag_and_drop_text">Drag and drop not implemented.</string>
    <string name="toast_no_play">All ship are\'nt on the board</string>

    <!-- SingleplayerMenuActivity -->
    <string name="activity_singleplayer_menu_label">Menu player versus computer</string>
    <string name="button_new_game_text">New game</string>
    <string name="button_load_game_text">Load previous game</string>
    <string name="toast_no_saved_game_text">No previous saved game.</string>

    <!-- StartActivity -->
    <string name="button_player_vs_computer_text">Player versus computer</string>
    <string name="button_player_vs_player_text">Player versus player</string>
    <string name="button_settings_name">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_manage_account">Manage account</string>
    <string name="title_activity_connection">Connection</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_wifi">WifiActivity</string>

    <!-- AccountActivity -->
    <string name="buttonSignIn">Sign in</string>
    <string name="buttonSignUp">Sign up</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextLogin">Login</string>
    <string name="toast_error_login_password">Error login/password</string>
    <string name="toast_connected_as">Connected as</string>


    <!--BluetoothActivity -->
    <string name="textViewBluetoothDevices">Bluetooth Devices</string>

    <!--SignInActivity -->
    <string name="editTextFirstname">Firstname</string>
    <string name="editTextLastname">Lastname</string>
    <string name="toast_account_created">Account created</string>
    <string name="toast_db_insert_error">DB insert error</string>

    <!--ManageAccountActivity -->
    <string name="toast_account_updated">Account updated</string>
    <string name="toast_update_error">Update error</string>
    <string name="buttonSaveChanges">Save changes</string>

</resources>
