<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/paleBlue"
    tools:context="fr.info.orleans.androidbattleship.activities.SignInActivity">

    <!--Dummy view to prevent keyboard pop-->
    <View android:layout_width="0dip" android:layout_height="0dip"
          android:focusableInTouchMode="true"
          android:focusable="true"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/editText_firstname"
            android:hint="@string/editTextFirstname"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/editText_lastname"
            android:maxLength="32"
            android:hint="@string/editTextLastname"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/editText_login"
            android:hint="@string/editTextLogin"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/editText_password"
            android:inputType="textPassword"
            android:hint="@string/editTextPassword"
            android:textAlignment="center"/>

        <Button style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_sign_in"
            android:text="@string/buttonSignIn"/>

    </TableLayout>


</LinearLayout>