<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/paleBlue"
    tools:context="fr.info.orleans.androidbattleship.activities.AccountActivity">


    <!--Dummy view to prevent keyboard pop-->
    <View android:layout_width="0dip" android:layout_height="0dip"
          android:focusableInTouchMode="true"
          android:focusable="true"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/editTextLogin"
            android:textAlignment="center"
            android:id="@+id/editText_login"/>
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:id="@+id/editText_password" />

        <Button style="@style/ButtonTheme"
            android:id="@+id/button_sign_up"
            android:text="@string/buttonSignUp"
            android:layout_weight="1"/>
    </TableLayout>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="@style/ButtonTheme"
            android:id="@+id/button_sign_in"
            android:text="@string/buttonSignIn"
            android:layout_weight="1"/>
    </TableLayout>

</LinearLayout>