<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/paleBlue"
    tools:context=".activities.StartActivity">

    <TableLayout
        android:layout_width="@dimen/tablelayout_width"
        android:layout_height="wrap_content">
        <Button style="@style/ButtonTheme"
            android:id="@+id/button_player_vs_computer"
            android:text="@string/button_player_vs_computer_text"/>
        <Button style="@style/ButtonTheme"
            android:id="@+id/button_player_vs_player"
            android:text="@string/button_player_vs_player_text" />
        <Button style="@style/ButtonTheme"
            android:id="@+id/button_settings"
            android:text="@string/button_settings_name" />
    </TableLayout>

</LinearLayout>
