<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/paleBlue"
    android:weightSum="1"
    tools:context="fr.info.orleans.androidbattleship.activities.GameActivity">

    <TextView
        android:id="@+id/textview_hint_turn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.04"
        android:layout_gravity="center"
        android:text="@string/textview_player_turn_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:layout_weight="0.95"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <GridLayout
                android:id="@+id/gridlayout_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.99"
                android:rowCount="11"
                android:columnCount="11">
            </GridLayout>
            <TextView
                android:id="@+id/textview_player_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.01"
                android:text="@string/textview_player_grid_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="vertical">
            <GridLayout
                android:id="@+id/gridlayout_enemy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.99"
                android:rowCount="11"
                android:columnCount="11">
            </GridLayout>
            <TextView
                android:id="@+id/textview_enemy_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.01"
                android:text="@string/textview_enemy_grid_text"/>
        </LinearLayout>
    </LinearLayout>
    <Button style="@style/ButtonTheme"
        android:id="@+id/button_save"
        android:layout_width="@dimen/button_save_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.01"
        android:text="@string/button_save_text"/>

</LinearLayout>
